# Business_Transformer

./: Business_Transformer.py  README.md  pyproject.toml  requirements.txt
db/: chroma.sqlite3
outputs/market_research/: industry_company_research.md
outputs/resources/: resource_collection.md
outputs/use_cases/: ai_usecase_analysis.md
pages/: Reports_Generator.py
src/businessTransformer/: crew.py  main.py
src/businessTransformer/config/: agents.yaml  tasks.yaml
src/businessTransformer/tools/: tools.py
